# Harnice

./: .gitignore  .harness_system_references  404.html  README.md  drawnby.json  feature_tree_editor_state.json  index.html  installation.txt  mkdocs.yml  pyproject.toml  sitemap.xml  ~$pitch deck.pptx
.github/codeql/: codeql-config.yml
.github/workflows/: check-docs.yml  check_feature_tree_gui.yml  ci.yml  codeql.yml
Backshell/M85049-88_9Z03/: M85049-88_9Z03-revision_history.tsv
Backshell/M85049-90_9Z03/: M85049-90_9Z03-revision_history.tsv
Connector/D38999_26ZA98PN/: D38999_26ZA98PN-revision_history.tsv
Connector/D38999_26ZB98PN/: D38999_26ZB98PN-revision_history.tsv
Disconnect/kicad/: disconnect.kicad_sym
Flagnote/bom_item/: bom_item-revision_history.tsv
Flagnote/bom_table_item/: bom_table_item-revision_history.tsv
Flagnote/build_note/: build_note-revision_history.tsv
Flagnote/buildnote/: buildnote-revision_history.tsv
Flagnote/engineering_note/: engineering_note-revision_history.tsv
Flagnote/part_name/: part_name-revision_history.tsv
Titleblock/harnice_tblock-11x8.5/: harnice_tblock-11x8.5-revision_history.tsv
artifact_builders/: standard_harnice_formboard.py  wirelist_exporter.py
artifact_builders/bom_exporter/: bom_exporter-revision_history.tsv
artifact_builders/bom_exporter_bottom_up/: bom_exporter_bottom_up-revision_history.tsv
artifact_builders/pdf_generator/: pdf_generator-revision_history.tsv
artifact_builders/wireviz_builder/: wireviz_builder-revision_history.tsv
build_macros/basic_channel_mapper_build_macro/: basic_channel_mapper_build_macro-revision_history.tsv
build_macros/harnice_esch_build_macro/: harnice_esch_build_macro-revision_history.tsv
build_macros/multi_ch_junction_mapper_build_macro/: multi_ch_junction_mapper_build_macro-revision_history.tsv
build_macros/wireviz_yaml_build_macro/: wireviz_yaml_build_macro-revision_history.tsv
channel_types/: channel_types.tsv
commands/_appearance/: index.html
commands/_circuits_utils/: index.html
commands/_feature_tree_utils/: index.html
commands/_formboard_utils/: index.html
commands/_library_utils/: index.html
commands/_manipulating_files/: index.html
commands/fileio/: index.html
docs/: CNAME  gui_layout.md  index.md  macros.md  mkdocs.yml  test.md
docs_src/: commands.py  docs_compiler.py  docs_functions.py  fragments.py  getting_started.py  interacting_with_data.py  products.py
gui_layout/: index.html
harnice/: .env  .gitignore
kicad/: harnice.kicad_pro  harnice.kicad_sym
paths/: paths.example.json
prebuilders/: harnice_esch_prebuilder.py
src/: gui_state.json
temp_documentation/: README.md
(+888 files in other folders)
