[project]
name = "harnice"
version = "0.0.1"
authors = [
  { name="Kenyon Shutt", email="kenyonshutt@gmail.com" },
]
description = "End-to-end harness generator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "PySide6>=6.6",
]

[project.urls]
Homepage = "https://github.com/kenyonshutt/harnice"
Issues = "https://github.com/kenyonshutt/harnice/issues"

[project.scripts]
harnice = "harnice.cli:main"

harnice-gui = "harnice.gui.launcher:main"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
