[project]
name = "harnice"
version = "0.0.1"
authors = [
  { name="Kenyon Shutt", email="kenyonshutt@gmail.com" },
]
description = "Electrical System CAD"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "PySide6>=6.6",
    "sexpdata",
    "Pillow",
    "PyYAML",
    "xlwt",
    "webcolors"
]

[project.urls]
Homepage = "https://github.com/harnice/Harnice"
Issues = "https://github.com/harnice/Harnice/issues"

[project.scripts]
harnice = "harnice.cli:main"

harnice-gui = "harnice.gui.launcher:main"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
