[project]
name = "harnice"
dynamic = ["version"]
authors = [
  { name="Kenyon Shutt", email="harnice.io@gmail.com" },
]
description = "Electrical System CAD"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sexpdata",
    "Pillow",
    "pypdf",
    "xlwt",
    "webcolors",
    "prompt_toolkit"
]

[project.urls]
Documentation = "https://harnice.io/"
Homepage = "https://github.com/harnice/Harnice"
Issues = "https://github.com/harnice/Harnice/issues"

[project.scripts]
harnice = "harnice.cli:main"
harnice-gui = "harnice.gui.console_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
# version derived from git tags (e.g. v0.3.3 → 0.3.3)

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"